# MD_CBL-Group_2

./: .gitattributes  .gitignore  README.md  age_correlation_analysis.ipynb  autoarima_fitting.ipynb  basic_eda.py  clean_data.py  clustering_sarima_opt.ipynb  concat_eda_all_data.py  config.py  eda.py  exogenous_variables.py  fine-tune_ward_models.py  finetune_ward_models.py  imd_correlation_analysis.ipynb  lsoa_plotting_example.py  main.py  model_fitting_score.py  model_testing.py  police_allocation.py  pyproject.toml  requirements.txt  residual_opt_exmaple.ipynb  residual_opt_sarima.ipynb  sarima_exog.ipynb  social_economic_sarima.py  spatial_allocation_wards.ipynb  temporal_forcasting_model.ipynb
all_data/: 2013-12-metropolitan-street-burglary.csv  2014-02-metropolitan-street-burglary.csv  2014-03-metropolitan-street-burglary.csv  2014-05-metropolitan-street-burglary.csv  2014-06-metropolitan-street-burglary.csv  2014-07-metropolitan-street-burglary.csv  2014-08-metropolitan-street-burglary.csv  2014-09-metropolitan-street-burglary.csv  2014-10-metropolitan-street-burglary.csv  2015-01-metropolitan-street-burglary.csv  2015-02-metropolitan-street-burglary.csv  2015-03-metropolitan-street-burglary.csv  2015-07-metropolitan-street-burglary.csv  2015-09-metropolitan-street-burglary.csv  2016-01-metropolitan-street-burglary.csv  2016-02-metropolitan-street-burglary.csv  2016-03-metropolitan-street-burglary.csv  2016-06-metropolitan-street-burglary.csv  2017-01-metropolitan-street-burglary.csv  2017-02-metropolitan-street-burglary.csv  2017-04-metropolitan-street-burglary.csv  2017-08-metropolitan-street-burglary.csv  2017-12-metropolitan-street-burglary.csv  2018-01-metropolitan-street-burglary.csv  2018-02-metropolitan-street-burglary.csv  2018-04-metropolitan-street-burglary.csv  2018-05-metropolitan-street-burglary.csv  2018-09-metropolitan-street-burglary.csv  2018-12-metropolitan-street-burglary.csv  2019-02-metropolitan-street-burglary.csv  2019-07-metropolitan-street-burglary.csv  2019-08-metropolitan-street-burglary.csv  2019-09-metropolitan-street-burglary.csv  2019-12-metropolitan-street-burglary.csv  2020-05-metropolitan-street-burglary.csv  2020-07-metropolitan-street-burglary.csv  2020-08-metropolitan-street-burglary.csv  2020-09-metropolitan-street-burglary.csv  2020-10-metropolitan-street-burglary.csv  2020-12-metropolitan-street-burglary.csv  (+26 more)
dashboard/: allocation.py  app.py  data.py
(+108 files in other folders)
