[project]
name = "md-cbl-group-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "esda>=2.7.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.2",
    "libpysal>=4.13.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-bio>=0.6.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "spreg>=1.8.2",
    "statsmodels>=0.14.4",
    "xgboost>=3.0.1",
    "xlrd>=2.0.1",
]

[tool.ruff]
lint.extend-select = [
    "I",
    "S",
    "B",
    "BLE",
    "C4",
    "ISC",
    "ICN",
    "INP",
    "Q",
    "RSE",
    "SIM",
    "TID",
    "PIE",
    "RUF",
    "TCH"]
show-fixes = true
