[project]
name = "md-cbl-group-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esda>=2.7.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy<2.0.0",
    "openpyxl>=3.1.5",
    "pmdarima>=2.0.4",
    "scikit-bio>=0.6.3",
    "seaborn>=0.13.2",
    "spreg>=1.8.3",
    "xgboost>=3.0.2",
    "xlrd>=2.0.1",
]

[tool.ruff]
lint.extend-select = [
    "I",
    "S",
    "B",
    "BLE",
    "C4",
    "ISC",
    "ICN",
    "INP",
    "Q",
    "RSE",
    "SIM",
    "TID",
    "PIE",
    "RUF",
    "TCH"]
show-fixes = true
